states in excercise mode, status text color changing, check function rework

--- a/App.config
+++ b/App.config
@@ -5,7 +5,7 @@
   </startup>
   <appSettings> 
     <add key="ClientSettingsProvider.ServiceUri" value="" />
-    <add key="DoUpdateCheck" value="true"/>
+    <add key="DoUpdateCheck" value="false"/>
   </appSettings>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
