Added WordSetPreviewWindow, 'correct' column removed from statistics view after exercise finish, fixed repetitive wordsets in excercises

--- a/LearningWords.csproj
+++ b/LearningWords.csproj
@@ -86,6 +86,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModel\WordSetPreviewViewModel.cs" />
     <Compile Include="ViewModel\WordSetStatisticsViewModel.cs" />
     <Compile Include="Views\AddOrEditWindow.xaml.cs">
       <DependentUpon>AddOrEditWindow.xaml</DependentUpon>
@@ -98,6 +99,9 @@
     <Compile Include="ViewModel\AddOrEditViewModel.cs" />
     <Compile Include="ViewModel\ExerciseTestViewModel.cs" />
     <Compile Include="ViewModel\LearningWordsViewModel.cs" />
+    <Compile Include="Views\WordSetPreviewWindow.xaml.cs">
+      <DependentUpon>WordSetPreviewWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\WordSetStatisticsWindow.xaml.cs">
       <DependentUpon>WordSetStatisticsWindow.xaml</DependentUpon>
     </Compile>
@@ -122,6 +126,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\WordSetPreviewWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Views\WordSetStatisticsWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
