--- a/App.config
+++ b/App.config
@@ -6,6 +6,7 @@
   <appSettings> 
     <add key="ClientSettingsProvider.ServiceUri" value=""/>
     <add key="DoUpdateCheck" value="false"/>
+    <add key="SpecialCharacters" value="Data\SpecialCharacters.txt"/>
   </appSettings>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
