Okno edycji i sprawdzanie aktualizacji poprawki
modifikacje okna edycji
- enter przenosi do pierwszej kolumny nowego wiersza
- można usuwac wiersze
- przy zapisie usuwane są puste pary

Sprawdzanie aktualizacji:
- można wczytać config z starego programu pryz pomocy importu
- dodano usuwanie komunikatu o nowej wersji gdy już raz się pojawi

--- a/App.config
+++ b/App.config
@@ -6,6 +6,7 @@
   <appSettings> 
     <add key="ClientSettingsProvider.ServiceUri" value=""/>
     <add key="DoUpdateCheck" value="false"/>
+    <add key="ShowUpdateNote" value="true"/>
     <add key="SpecialCharacters" value="Data\SpecialCharacters.txt"/>
   </appSettings>
   <system.web>
