--- a/App.config
+++ b/App.config
@@ -5,7 +5,7 @@
   </startup>
   <appSettings> 
     <add key="ClientSettingsProvider.ServiceUri" value=""/>
-    <add key="DoUpdateCheck" value="false"/>
+    <add key="DoUpdateCheck" value="true"/>
     <add key="ShowUpdateNote" value="true"/>
     <add key="SpecialCharacters" value="Data\SpecialCharacters.txt"/>
   </appSettings>
