- first visual version of activity calendar window

--- a/LearningWords.csproj
+++ b/LearningWords.csproj
@@ -111,9 +111,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Model\ActivityDayModel.cs" />
+    <Compile Include="ViewModel\ActivityCalnedarViewModel.cs" />
     <Compile Include="ViewModel\OptionsViewModel.cs" />
     <Compile Include="ViewModel\WordSetPreviewViewModel.cs" />
     <Compile Include="ViewModel\WordSetStatisticsViewModel.cs" />
+    <Compile Include="Views\ActivityCalendarWindow.xaml.cs">
+      <DependentUpon>ActivityCalendarWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\OptionsWindow.xaml.cs">
       <DependentUpon>OptionsWindow.xaml</DependentUpon>
     </Compile>
@@ -134,6 +139,10 @@
     <Compile Include="Views\WordSetStatisticsWindow.xaml.cs">
       <DependentUpon>WordSetStatisticsWindow.xaml</DependentUpon>
     </Compile>
+    <Page Include="Views\ActivityCalendarWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\OptionsWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
